add prometheus and nginx exporter

--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -14,5 +14,10 @@ http {
               location / {
                   proxy_pass http://container;
               }
+
+              location /metrics {
+                  stub_status;
+                  allow all;
+              }
         }
 }
