--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "knex": "^0.95.14",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.1"
+    "npm": "^9.4.2",
+    "pg": "^8.7.1",
+    "prom-client": "^14.1.1"
   }
 }
