--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,6 +1,35 @@
 scrape_configs:
-  - job_name: 'nginx-website'
-    scrape_interval: 15s
+  - job_name: 'server_nginx'
+    scrape_interval: 5s
+    scrape_timeout: 5s
     metrics_path: '/metrics'
     static_configs:
       - targets: ['nginx-exporter:9113']
+        labels:
+            group: 'nginx'
+            alias: nginx_server
+
+  - job_name: node # To get metrics about the exporter’s targets
+    scrape_interval: 5s
+    scrape_timeout: 5s
+    metrics_path: /metrics
+    static_configs:
+      - targets: ['container-app1:80', 'container-app2:80', 'container-app3:80']
+        labels:
+            group: 'node-js'
+
+  - job_name: prometheus
+    scrape_interval: 5s
+    static_configs:
+    - targets:
+      - prometheus:9090
+      - pushgateway:9091
+      - cadvisor:8080
+
+  - job_name: docker
+    scrape_interval: 5s
+    static_configs:
+    - targets:
+      - 172.17.0.1:9323
+
+
